# internal/dtos/dtos.go
@@ -1,6 +1,18 @@
 package dtos
 
-type TTLDTO struct {
-	TTLCount uint `json:"ttl_count"`
-	TTLUnit  uint `json:"ttl_unit"`
+import "time"
+
+type LinkDTO struct {
+	ShortSuffix string `json:"short_suffix"`
+	Url         string `json:"url"`
+	TTLCount    uint   `json:"ttl_count"`
+	TTLUnit     string `json:"ttl_unit"`
+}
+
+type LinkInfoDto struct {
+	ID             string    `json:"id"`
+	ShortSuffix    string    `json:"short_suffix"`
+	Url            string    `json:"url"`
+	Clicks         uint      `json:"clicks"`
+	ExpirationDate time.Time `json:"expiration_date"`
 }
